2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_saver/dither.[ch]: Moved from src/
	* src/Makefile.am, plugins/image_saver/Makefile.am: Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_view_draw.c: Rename from image_view_draw.c
	* src/gimv_thumb_view_album.c: Rename from thumbnail_view_album.c
	* src/Makefile.am: Follow tha change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_exif_view.[ch]: Rename from src/exif_view.[ch]
	* src/Makefile.am, src/gimv_image_win.c. src/gimv_thumb_view.c:
	Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_dir_view.[ch]: Renamed from src/dirview.[ch]
	* src/Makefile.am, src/gimageview.c src/gimv_thumb_view.c,
	  src/gimv_thumb_win.c, src/prefs_ui/prefs_ui_thumbwin.c:
	Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_text_win.[ch]: Renamed from src/text_viewer.[ch]
	* src/Makefile.am, src/help.c: Follow the change.

2007-10-17 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_nav_win.[ch]: Use private struct.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/thumbnail/gimv_thumb.c, plugins/image_loader/prefs_spi.c,
	  plugins/image_view/prefs_xine.c, plugins/image_view/prefs_mplayer.c,
	  src/gimv_elist.c, src/gimv_image_win.c, src/auto_completion.c,
	  src/gtkutils.c, src/gimv_prefs_win.c, src/gimv_thumb_win.c,
	  src/prefs_ui/prefs_ui_etc.c, src/prefs_ui/prefs_ui_common.c,
	  src/prefs_ui/prefs_ui_progs.c, src/prefs_ui/prefs_ui_thumbwin.c,
	  src/prefs_ui/prefs_ui_plugin.c, src/prefs_ui/prefs_ui_imagewin.c:
	gtk_widget_set_usize -> gtk_widget_set_size_request.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c. src/gimv_thumb_win.c: Don't offset help menu.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c: Don't show resize grip of status bar.
	* src/gimv_thumb_win.c: Don't bind accel keys to summary mode menu.

2007-10-16 Takuro Ashie <ashie@homa.ne.jp>
