@@ -1,3 +1,8 @@
+2007-10-18 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/gimv_text_win.[ch]: TextViewer -> GimvTextWin
+	* src/help.c: Follow the change.
+
 2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
 
 	* plugins/image_saver/dither.[ch]: Moved from src/
